--- a/blossom/all/.env
+++ b/blossom/all/.env
@@ -1,6 +1,8 @@
 # blossom文件挂载路径(包含图片)
 BLOSSOM_MOUNT=./blossom/
 
+# MySQL端口
+MYSQL_PORT=3306
 # MySQL root用户密码
 MYSQL_ROOT_PASSWORD=root.10200.
 # 为Blossom准备的MySQL数据库名称
